Fixed Modal Image Alignment on Responsive View and added unique identifier to shortcode

--- a/include/assets/css/lightbox-tooltip.css
+++ b/include/assets/css/lightbox-tooltip.css
@@ -88,6 +88,10 @@
 	  text-align: center;
   }
   
+  .gdx-modal-content img {
+  	margin: 0 !important;
+  }
+
   .gdx-close-modal {
 	  float: right;
 	  cursor: pointer;
